test/stg/error/fun2.stg
-- No arrow, expr in fun definition
fun = FUN(x y x);
